# huggingface-agents-course

./: .gitignore  README.md  app.py  dummy_agent_library.ipynb  pyproject.toml  tools.py
unit1/bonus_fine_tuning/: bonus-unit1.ipynb
unit1/dummy_agent_library/: dummy_agent_library.ipynb
unit2/: quiz.ipynb
unit2/2_2_llamaindex/: components.ipynb
