[project]
name = "agents-course"
version = "0.1.0"
description = "https://huggingface.co/agents-course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=7.3.2",
    "gradio>=5.16.0",
    "markdownify>=0.14.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "smolagents>=1.9.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
