[project]
name = "agents-course"
version = "0.1.0"
description = "https://huggingface.co/agents-course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [] # use notebooks themselves
[dependency-groups]
dev = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
